1 Sep 2011: Wouter
	- install backups and uninstall restores resolv.conf.
	- watch on OSX the network.plist and airport.plist files and not
	  the entire directory, which changes too often.
	- README and BSD LICENSE.
	- renamed plist nl.nlnetlabs.x

31 Aug 2011: Wouter
	- cocoa and gtk build and install and uninstall make targets
	- GTK autostart .desktop entry.
	- man page.

30 Aug 2011: Wouter
	- osx xcode status item.
	- you can test the Cocoa GUI with: cd osx/RiggerStatusItem/
	  Build/Release and then open RiggerStatusItem.app --args -c /full/
	  path/to/test.conf.  And have full paths inside test.conf as well.

26 Aug 2011: Wouter
	- status control command shows the latest probe results (and exits).
	- use full path for unbound-control (for install in /opt of unbound).
	- icons at 22px on OSX.
	- osx dir and osx fixes: full paths, flush cache when secure again.
	- use scutil to set DNS on osx.

25 Aug 2011: Wouter
	- OSX launchd and loginitem installed.

24 Aug 2011: Wouter
	- configure fixed --with.. and test for sleep and random.

23 Aug 2011: Wouter
	- configure adapted for windows compile.
	- panel compiles and GUI shows with libGTK+-2.0 on windows.

18 Aug 2011: Wouter
	- INSTALL instructions.
	- fixed for ldns linkage.
	- fix generated key permissions, world readable for user keys.
	- tag 0.1

17 Aug 2011: Wouter
	- noaction option that takes no action but pretends.
	- fix linefeed in resolv.conf printout.
	- unsafe test option works reliably.
	- fix dialog destroy that deletes the dialog.
	- alert icon has nicer exclamation mark.
	- added configfile and example.conf.
	- Reprobe command.

16 Aug 2011: Wouter
	- detect localhost in DHCP DNS servers and skip them, because a loop
	  from the resolver to itself is not good.  Since localhost resolver
	  may probe as a good DNS cache itself easily.
	- can detect network disconnect and acts appropriately (very quiet).
	- fix bug with active number of connections.
	- fix nice exit for panel on quit.