@@ -1,3 +1,6 @@
+2 Sep 2011: Wouter
+	- GUI tray icon works on windows.
+
 1 Sep 2011: Wouter
 	- install backups and uninstall restores resolv.conf.
 	- watch on OSX the network.plist and airport.plist files and not
